# scass

./: CMakeLists.txt  main.cpp  objmodel.cpp  objmodel.h  objparser.cpp  objparser.h  tasks.txt  unit_tests.cpp
